@@ -36,7 +36,7 @@ Done for version 2.8.1 (released ??/??/2016):
    15- [libpari] rnfcomplete, rnf_build_nfabs, bnf_build_cycgen,
        bnf_build_units, bnf_build_matalpha
    16- [libpari] rnf_zkabs
-   17- [libpari] get_nf_field (black box field arithemtic over a number
+   17- [libpari] get_nf_field (black box field arithmetic over a number
        field nf), nfM_det, nfM_inv, nfM_mul, nfM_nfC_mul
    18- [libpari] bnftestprimes
    19- [libpari] upr_norm
@@ -53,6 +53,7 @@ BA 28- [libpari] F2x_factor_squarefree, F2xqX_factor, FlxqX_factor
 BA 29- [libpari] FlxXC_to_F2xXC, F2xXC_to_ZXXC
    30- [libpari] pr_uniformizer, prV_lcm_capZ, pr_inv, pr_inv_p
    31- [libpari] cmp_padic
+   32- [libpari] ZV_snf_trunc
 
   Changed
     1- remove useless flag in idealappr: directly allow factorization
